Move add screen to feature module and remove empty module

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,4 +7,9 @@
         android:id="@+id/listFragment"
         android:name="com.keanequibilan.screenlist.ListFragment"
         android:label="ListFragment" />
+
+    <fragment
+        android:id="@+id/addFragment"
+        android:name="com.keanequibilan.screenadd.AddFragment"
+        android:label="AddFragment" />
 </navigation>
