--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/listFragment">
     <fragment
         android:id="@+id/listFragment"
         android:name="com.keanequibilan.screenlist.ListFragment"
-        android:label="ListFragment" />
+        android:label="ListFragment"
+        tools:layout="@layout/fragment_list" />
 
     <fragment
         android:id="@+id/addFragment"
         android:name="com.keanequibilan.screenadd.AddFragment"
-        android:label="AddFragment" />
+        android:label="AddFragment"
+        tools:layout="@layout/fragment_add" />
 </navigation>
