Add swipe card layout

--- a/screenswipe/src/main/res/layout/fragment_swipe.xml
+++ b/screenswipe/src/main/res/layout/fragment_swipe.xml
@@ -3,4 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.yuyakaido.android.cardstackview.CardStackView
+        android:id="@+id/sv_cards"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
