--- a/screenadd/src/main/res/layout/fragment_add.xml
+++ b/screenadd/src/main/res/layout/fragment_add.xml
@@ -4,17 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context=".AddFragment">
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/et_name"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/el_front"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:hint="Item Name"
-        app:layout_constraintBottom_toTopOf="@id/spacer"
+        android:layout_margin="16dp"
+        android:hint="@string/front"
+        app:endIconMode="clear_text"
+        app:layout_constraintBottom_toTopOf="@id/el_back"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:background="@color/design_default_color_primary">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/el_back"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:hint="@string/back"
+        app:endIconMode="clear_text"
+        app:layout_constraintBottom_toTopOf="@id/spacer"
+        app:layout_constraintTop_toBottomOf="@id/el_front"
+        tools:background="@color/design_default_color_primary">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Space
         android:id="@+id/spacer"
@@ -23,14 +51,17 @@
         app:layout_constraintBottom_toTopOf="@id/btn_add"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_name" />
+        app:layout_constraintTop_toBottomOf="@id/el_back" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/btn_add"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Item"
+        android:padding="16dp"
+        android:text="@string/add_card"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/spacer" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
