--- a/screenlist/src/main/res/layout/fragment_list.xml
+++ b/screenlist/src/main/res/layout/fragment_list.xml
@@ -11,6 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/list_item_card" />
+        tools:listitem="@layout/list_item" />
 
 </FrameLayout>
