--- a/screenswipe/src/main/res/layout/card_item_front.xml
+++ b/screenswipe/src/main/res/layout/card_item_front.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cv_card"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="16dp"
