--- a/screenlist/src/main/res/layout/list_item.xml
+++ b/screenlist/src/main/res/layout/list_item.xml
@@ -7,9 +7,10 @@
     android:padding="16dp">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cv_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/design_default_color_primary"
+        app:cardBackgroundColor="@android:color/black"
         app:cardCornerRadius="16dp"
         app:cardPreventCornerOverlap="true">
 
