--- a/screenlist/src/main/res/layout/list_item.xml
+++ b/screenlist/src/main/res/layout/list_item.xml
@@ -7,14 +7,13 @@
     android:padding="16dp">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cv_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="@android:color/black"
         app:cardCornerRadius="16dp"
-        app:cardPreventCornerOverlap="true">
+        app:cardPreventCornerOverlap="false">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
