--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,13 +3,13 @@
     <item
         android:id="@+id/listFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_view_list"
+        android:icon="@drawable/ic_splitscreen"
         android:title="@string/list_cards" />
 
     <item
         android:id="@+id/swipeFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_splitscreen"
+        android:icon="@drawable/ic_flip_to_front_blackdp"
         android:title="@string/swipe_cards" />
 
     <item
