Add gradient to swipe card back background

--- a/screenswipe/src/main/res/layout/card_item_back.xml
+++ b/screenswipe/src/main/res/layout/card_item_back.xml
@@ -10,8 +10,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="16dp"
-        app:cardBackgroundColor="@color/design_default_color_primary"
         app:cardCornerRadius="20dp"
+        app:cardPreventCornerOverlap="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="4:3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,7 +20,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@drawable/card_back_background">
 
             <TextView
                 android:id="@+id/tv_message"
