Navigate to empty details view when clicking on list item

--- a/screenlist/src/main/res/navigation/nav_screen_list.xml
+++ b/screenlist/src/main/res/navigation/nav_screen_list.xml
@@ -9,5 +9,20 @@
         android:id="@+id/listFragment"
         android:name="com.keanequibilan.screenlist.ListFragment"
         android:label="ListFragment"
-        tools:layout="@layout/fragment_list" />
+        tools:layout="@layout/fragment_list">
+        <action
+            android:id="@+id/action_listFragment_to_detailsFragment"
+            app:destination="@id/detailsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/detailsFragment"
+        android:name="com.keanequibilan.screenlist.DetailsFragment"
+        android:label="DetailsFragment"
+        tools:layout="@layout/fragment_details">
+        <argument
+            android:name="cardId"
+            app:argType="integer"
+            app:nullable="false" />
+    </fragment>
 </navigation>
