--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/swipeFragment">
-    <fragment
-        android:id="@+id/swipeFragment"
-        android:name="com.keanequibilan.screenswipe.SwipeFragment"
-        android:label="SwipeFragment"
-        tools:layout="@layout/fragment_swipe" />
+    app:startDestination="@id/nav_screen_swipe">
+
+    <include app:graph="@navigation/nav_screen_swipe" />
 
     <include app:graph="@navigation/nav_screen_add" />
 
