--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -13,7 +13,7 @@
         android:title="@string/swipe_cards" />
 
     <item
-        android:id="@+id/nav_screen_add"
+        android:id="@+id/nav_feature_add"
         android:enabled="true"
         android:icon="@drawable/ic_add_to_photos"
         android:title="@string/add_card" />
