--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_screen_list"
+        android:id="@+id/nav_feature_list"
         android:enabled="true"
         android:icon="@drawable/ic_splitscreen"
         android:title="@string/list_cards" />
