--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,9 +2,9 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/nav_screen_swipe">
+    app:startDestination="@id/nav_feature_swipe">
 
-    <include app:graph="@navigation/nav_screen_swipe" />
+    <include app:graph="@navigation/nav_feature_swipe" />
 
     <include app:graph="@navigation/nav_feature_add" />
 
